--- a/web/templates/reports/score_report.html
+++ b/web/templates/reports/score_report.html
@@ -977,7 +977,7 @@
             <span class="breakdown-value">15 pts</span>
           </li>
           <li class="breakdown-item">
-            <span class="breakdown-label">Structure Quality</span>
+            <span class="breakdown-label">Semantic Structure</span>
             <span class="breakdown-value">20 pts</span>
           </li>
           <li class="breakdown-item">
